# global-greeter-practice

./: .pre-commit-config.yaml  LICENSE  README.md  copyver.py  notes.txt  pyproject.toml  requirements-dev.txt  requirements-flake8.txt  requirements-mypy.txt  requirements-test.txt  requirements.txt  tox.ini  toxpoem.py
pdocoutput/: greeter.html  index.html  search.js
pdocoutput/greeter/: greet.html  templates.html
src/greeter/: __init__.py  greet.py
src/greeter/templates/: greet.j2
tests/: greeter_test.py  test_greeter.py
