[tool.poetry]
name = "global-greeter"
version = "0.1.1a0"
description = ""
authors = ["Richard <zohassadar@gmail.com>"]
readme = "README.md"
packages = [{include = "global_greeter", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
tomlkit = "^0.11.4"
black = "^22.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
