[tool.poetry]
name = "greeter"
version = "0.1.1a0"
description = ""
authors = ["Richard <zohassadar@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
greet = 'greeter.greet:main'


[tool.poetry.dependencies]
python = "^3.10"
Jinja2 = "^3.1.2"



[tool.poetry.group.dev.dependencies]
tomlkit = "^0.11.4"
black = "^22.8.0"
tox = "^3.26.0"
pytest = "^7.1.3"
flake8 = "^5.0.4"
mypy = "^0.971"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
