[tool.poetry]
name = "greeter"
version = "0.1.1a0"
description = ""
authors = ["Richard <zohassadar@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
greet = 'greeter.greet:main'


[tool.poetry.dependencies]
python = "^3.10"
Jinja2 = "^3.1.2"



[tool.poetry.group.flake8.dependencies]
flake8 = "^5.0.4"


[tool.poetry.group.mypy.dependencies]
mypy = "^0.971"


[tool.poetry.group.test.dependencies]
coverage = "^6.4.4"
pytest = "^7.1.3"



[tool.poetry.group.dev.dependencies]
tomlkit = "^0.11.4"
tox = "^3.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"



[tool.coverage.run]
branch = true
